added repo link

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -148,11 +148,13 @@ main {
   }
 }
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   padding: 15px 50px;
   opacity: 0.4;
+
+  & a {
+    color: inherit;
+  }
 }
 @keyframes animEntryHandLoop {
   0% {
