--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,11 +130,12 @@ main .game-actions button:focus {
   outline: 0;
 }
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   padding: 15px 50px;
   opacity: 0.4;
+}
+footer a {
+  color: inherit;
 }
 @keyframes animEntryHandLoop {
   0% {
